# aurora_ros

slamware_ros2_sdk_linux-x86_64-gcc9/src/aurora_remote_public/include/: aurora_pubsdk_common_def.h  aurora_pubsdk_inc.h  aurora_pubsdk_objects.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/aurora_remote_public/include/cxx/: slamtec_remote_objects.hxx  slamtec_remote_public.hxx
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_ros_sdk/: CMakeLists.txt  package.xml
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_ros_sdk/include/slamware_ros_sdk/: slamware_ros_sdk_client.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_ros_sdk/launch/: slamware_ros_sdk_server_node.xml
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_ros_sdk/rviz/: slamware_ros_sdk_server_node.rviz
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_ros_sdk/src/client/: slamware_ros_sdk_client.cpp
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_ros_sdk/src/server/: msg_convert.cpp  msg_convert.h  server_params.cpp  server_work_data.h  server_worker_base.cpp  server_worker_base.h  server_workers.cpp  server_workers.h  slamware_ros_sdk_server.cpp  slamware_ros_sdk_server.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/: rpos_version.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/core/: action.h  geometry.h  obstacle_description.h  parameter.h  system_event.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/features/artifact_provider/: feature.h  rectangle_area.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/features/location_provider/: feature.h  image_features_map.h  map.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/features/motion_planner/: feature.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/features/system_resource/: feature.h  private_config.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/message/: depth_camera_messages.h  schedule_messages.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/robot_platforms/: slamware_agent_platform.h  slamware_core_platform.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/robot_platforms/objects/: slamware_agent_objects.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/system/config/: config_parser.h  dynamic_config.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/system/serialization/: core_objects_serialization.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/system/signal/: signal_impl.h
slamware_ros2_sdk_linux-x86_64-gcc9/src/slamware_sdk/include/rpos/system/util/: async_synchronizer.h  tcp_client.h  tcp_server.h
